test/subjects/errors/bad_hint_object.php
<?php

	function f (bool $x = true) // { phc-error: Default value for parameters with a class type hint can only be NULL }
	{
	}
?>
